# Dots-Old

./: .bash_profile  .zlogin  .zprofile  .zsh_plugins.txt  .zshrc  README.md  aur.list  justfile  pac.list
.config/: kdeglobals  kglobalshortcutsrc  kwinrc  lattedockrc  plasma-org.kde.plasma.desktop-appletsrc  user-dirs.dirs  user-dirs.locale
.config/Code - OSS/: Cookies  machineid  rapid_render.json  storage.json
.config/alacritty/: alacritty.yml
.config/autostart/: org.kde.latte-dock.desktop  picom.desktop
.config/autostart-scripts/: from_lock_screen.sh  set-late-above.sh  ssh-add.sh
.config/beets/: config.yaml
.homepage/: 404.html  sitemap.xml
.shell/: aliasrc  cvrt  distro  misc  sys
Code - OSS/: Network Persistent State
SS-Vim/: .gitrepo
Startpage/: .gitrepo  index.html
Systemd/: homepage.service
bash/: .bash_profile  .bashrc
bat/: config
browsh/: config.toml
bspwm/: autostart.sh  bspwmrc
bspwm/polybar/scripts/title_bar/: Cargo.toml
bspwm/polybar/scripts/title_bar/src/: main.rs
gtk-3.0/: bookmarks  settings.ini
htop/: htoprc
joshuto/: joshuto.toml  keymap.toml
kitty/: kitty.conf
leftwm/: config.toml
mpd/: mpd.conf  state
mpv/: config
nvim/: .gitrepo
pulse/: 0e7da57c7e0bfd8ca816bbc95ca1f9c7-device-volumes.tdb  daemon.conf
scripts/: backup_size.sh  home_used.sh  random.sh  requestsb-netspeed.sh  root_size.sh  root_used.sh  temp.sh  updates.sh
shell/: aliasrc  distro  exports  sys
sway/: secrets
waybar_bottom/: config
waybar_top/: config  style.css
zsh/: .zlogin  .zlogout  .zsh_plugins.txt
(+978 files in other folders)
